# agent-starter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
agent/: Dockerfile  pyproject.toml
agent/app/: admin_config.py  agent.py  config.py  config_store.py  converse.py  db.py  extract.py  main.py  models_meta.py  schemas.py  stream.py  telegram_api.py  telegram_bot.py  telegram_links.py
agent/app/auth/: bootstrap.py  deps.py  passwords.py  routes.py  sessions.py  usage.py
agent/app/tools/: __init__.py  context.py  emit.py  example.py  users.py
scripts/: new-project.sh
src/: App.tsx  main.tsx  theme.ts
src/adapters/: AgentAdapter.ts  MockAdapter.ts  index.ts
src/auth/: AuthContext.tsx
src/components/: LlmSettingsModal.tsx  LoginPage.tsx  PromptInput.tsx  Scratchpad.tsx  Shell.tsx  Transcript.tsx  Turn.tsx
src/components/Sidebar/: ConversationList.tsx
src/components/blocks/: BlockRenderer.tsx  ChartBlock.plotly.tsx  ChartBlock.tsx  MarkdownBlock.tsx  MetricBlock.tsx  TableBlock.tsx  TimelineBlock.tsx
src/data/: registry.ts
src/lib/: apiBase.ts  exportReport.tsx  pricing.ts  sseParser.ts
src/query/: useConverse.ts  useDataRef.ts
src/state/: conversationStore.ts  uiStore.ts
src/types/: adapter.ts  agentEvents.ts  blocks.ts  plotly-dist.d.ts  prompt.ts
